# SwissKnifePythonists

./: .coverage  .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: quality.yml
docs/: ARCHITECTURE.md  INTEGRATIONS.md  SECURITY.md  USAGE.md
examples/: anonymization.json  cloud-costs.json  cloud-resources.json  deploy.yaml  etl-mapping.json  faq.json  health.yaml  load-scenario.json  terraform-plan.json
src/swissknife/: __init__.py  cli.py
src/swissknife/core/: __init__.py  config.py  database.py  http.py  models.py  utils.py
src/swissknife/features/: __init__.py  alerts.py  anomaly_detector.py  anonymizer.py  arch_diagram.py  attack_surface.py  audit_log.py  backups.py  capacity.py  changelog.py  cidr_calculator.py  cloud_costs.py  cloud_tags.py  code_docs.py  code_metrics.py  config_drift.py  config_sync.py  cost_whatif.py  coverage_gaps.py  credential_rotation.py  dashboard.py  data_dictionary.py  data_masking.py  data_profiler.py  dataset_diff.py  db_migration.py  db_replication.py  dedup.py  dependency_scanner.py  deploy.py  docker_audit.py  dry_run.py  duplicate_code.py  env_wizard.py  error_budget.py  etl.py  faq_bot.py  feedback_templates.py  file_replication.py  firewall_validator.py  (+45 more)
tests/: test_adapters.py  test_cloud_new.py  test_core.py  test_data_new.py  test_data_tools.py  test_engineering_new.py  test_network_new.py  test_observability_new.py  test_operations.py  test_operations_new.py  test_people_new.py  test_security.py  test_security_new.py  test_transversal_new.py
