[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swissknife-pythonists"
version = "1.0.0"
description = "Suíte modular de automação de operações, segurança, dados e cloud"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "SwissKnife Pythonists"}]
dependencies = ["typer>=0.12", "PyYAML>=6.0", "httpx>=0.27"]

[project.optional-dependencies]
data = ["pandas>=2.2", "SQLAlchemy>=2.0", "Faker>=25"]
network = ["scapy>=2.5", "python-nmap>=0.7.1", "netmiko>=4.3", "napalm>=5.0", "pyshark>=0.6"]
cloud = ["boto3>=1.34", "azure-identity>=1.17", "azure-mgmt-compute>=33", "google-cloud-compute>=1.19"]
security = ["cryptography>=42", "scikit-learn>=1.5", "pip-audit>=2.7"]
all = [
  "pandas>=2.2", "SQLAlchemy>=2.0", "Faker>=25", "cryptography>=42",
  "scikit-learn>=1.5", "boto3>=1.34", "locust>=2.29"
]
dev = ["pytest>=8.2", "pytest-cov>=5", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
skp = "swissknife.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
